cambios del otro repositorio

--- a/AFD.html
+++ b/AFD.html
@@ -50,8 +50,9 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center justify-content-between">
-    
-        <h2>TP1 <img src="./assets/universidad-cuenca-plata-iso.svg" alt=""></h2>
+        <h2>
+          TP1 <img src="./assets/universidad-cuenca-plata-iso.svg" alt="" />
+        </h2>
         <!-- Uncomment below if you prefer to use text as a logo -->
         <!-- <h1 class="logo"><a href="index.html">Butterfly</a></h1> -->
 
@@ -60,8 +61,7 @@
             <li><a class="nav-link scrollto" href="./index.html">Inicio</a></li>
             <li class="dropdown">
               <a href="#"
-                ><span>Introduccion</span>
-                <i class="bi bi-chevron-down"></i
+                ><span>Introduccion</span> <i class="bi bi-chevron-down"></i
               ></a>
               <ul>
                 <li><a href="AFD.html">AFD</a></li>
@@ -76,7 +76,9 @@
               ></a>
               <ul>
                 <li><a href="determinante_primer.html">Primer automata</a></li>
-                <li><a href="determinante_segundo.html">Segundo automata</a></li>
+                <li>
+                  <a href="determinante_segundo.html">Segundo automata</a>
+                </li>
               </ul>
             </li>
             <li class="dropdown">
@@ -85,8 +87,12 @@
                 <i class="bi bi-chevron-down"></i
               ></a>
               <ul>
-                <li><a href="no_determinante_primer.html">Primer automata</a></li>
-                <li><a href="no_determinante_segundo.html">Segundo automata</a></li>
+                <li>
+                  <a href="no_determinante_primer.html">Primer automata</a>
+                </li>
+                <li>
+                  <a href="no_determinante_segundo.html">Segundo automata</a>
+                </li>
               </ul>
             </li>
           </ul>
@@ -98,24 +104,28 @@
     <!-- End Header -->
 
     <main id="main">
-      
-        <div class="primer-pantalla">
-          <img src="./assets/universidad-cuenca-plata.svg">
-          <h1>Primer Trabajo Práctico</h1>
-          <h3>Materia:</h3>
-          <h5>Teoría de la Computación</h5>
-          <h3>Docentes:</h3>
-          <ul>
-            <li>Lic. Del Rosario Gabriel</li>
-            <li>Ing. Lapertosa Sergio</li>
-          </ul>
-          <h3>Alumnos:</h3>
-          <ul>
-            <li>Trochez Martin</li>
-            <li>Duarte Octavio</li>
-          </ul>
+      <div class="primer-pantalla">
+        <div>
+          <h2>Automata Finito Determinista</h2>
         </div>
- 
+        <div class="textoIntroduccion">
+          <p>
+            Es un modelo abstracto que consiste en un conjunto finito de
+            estados, un conjunto finito de símbolos de entrada, una función de
+            transición, un estado inicial y un conjunto de estados finales. En
+            este autómata para cada estado y símbolo de entrada, hay exactamente
+            una transición definida.
+          </p>
+        </div>
+        <div class="org_fotos">
+          <div>
+            <img src="./assets/img/introduccion/afd.png" alt="" />
+          </div>
+          <div>
+            <img src="./assets/img/introduccion/afdFoto.png" alt="" />
+          </div>
+        </div>
+      </div>
     </main>
     <!-- End #main -->
 
